flux/openbao/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - openbao.cbc.gewis.nl
  rules:
    - backendRefs:
        - name: openbao-active
          port: 8200
