flux/openbao/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbao
  namespace: openbao
  annotations:
    external-dns.alpha.kubernetes.io/target: router02.net.gewis.nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openbao.cbc.gewis.nl`)
      kind: Rule
      services:
        - name: openbao-active
          port: 8200
  tls: {}
